<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/optionsScreen"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/difficultySettings"
            android:text="@string/difficulty"

            >
        <RadioButton
                android:id="@+id/easyRadio"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/easy"
                android:checked="false"
                />
        <RadioButton
                android:id="@+id/mediumRadio"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/medium"
                android:checked="true"
            />
        <RadioButton
                android:id="@+id/hardRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:checked="false"
            />
    </RadioGroup>
    <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="saveSettings"
        />


</LinearLayout>